Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <h2>Nuestros recuerdos</h2>
       <div class="galeria-contenedor">
         <button class="galeria-anterior">&#10094;</button>
-        <img id="galeria-imagen" src="F1.jpg" alt="Galería Boda">
+        <img id="galeria-imagen" src="f1.jpg" alt="Galería Boda">
         <button class="galeria-siguiente">&#10095;</button>
       </div>
       <div class="galeria-thumbs-wrap">
