--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
   <div class="contenedor-corazones"></div>
   <!-- Decoraciones externas arriba -->
   <div class="decoracion-externa superior">
-    <img src="NOMBRE_HOJAS_SUPERIOR.png" class="decoracion-png" alt="Hojas decorativas">
-  </div>
-  <div>
-    <img src="NOMBRE_IMAGEN_PORTADA.jpg" class="fotoportada" alt="Hojas decorativas">
-  </div>
+  <img src="NOMBRE_HOJAS_SUPERIOR.png" class="decoracion-png" alt="Hojas decorativas">
+</div>
+
+<img src="NOMBRE_IMAGEN_PORTADA.jpg" class="fotoportada" alt="Portada Novios">
+
+<header class="portada reveal">
     <!-- ...más imágenes si quieres... -->
   </div>
   <header class="portada reveal">
