Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <img src="NOMBRE_HOJAS_SUPERIOR.png" class="decoracion-png" alt="Hojas decorativas">
 </div>
 
-<img src="NOMBRE_IMAGEN_PORTADA.jpg" class="fotoportada" alt="Portada Novios">
+<div class="wrapper-fotoportada">
+  <img src="NOMBRE_IMAGEN_PORTADA.jpg" alt="Portada Novios" class="fotoportada">
+</div>
 
 <header class="portada reveal">
     <!-- ...más imágenes si quieres... -->
